--- a/css/product.css
+++ b/css/product.css
@@ -6,8 +6,8 @@ section.brd_crmb {
 
 .container .jumbotron,
 .container-fluid .jumbotron {
-    padding: 13px 20px;
-    font-size: 24px;
+    padding: 13px 35px;
+    font-size:18px;
     border-radius: 0;
     font-weight: bold;
     margin-bottom: 20px;
@@ -128,16 +128,17 @@ input[type=checkbox]:checked:disabled + label:before {
     border: 1px solid #ddd;
     padding: 5px;
     font-size: 14px;
+    position: relative;
     max-width: 210px;
 }
 
 .title {
-    font-size: 36px;
+    font-size:24px;
     text-transform: uppercase;
 }
 
 .adrs {
-    font-size: 18px;
+    font-size:14px;
 }
 
 .adrs p i {
@@ -197,12 +198,12 @@ span.rat_str {
 .icon-instagram:before,
 .icon-pinterest:before {
 
-    background: #080000;
+background: #080000;
     border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    font-size: 18px;
-    line-height: 32px;
+    width: 25px;
+    height: 25px;
+    font-size: 14px;
+    line-height: 26px;
     text-align: center;
     color: #fff;
 }
@@ -212,6 +213,11 @@ span.rat_str {
 .icon-instagram:before:hover,
 .icon-pinterest:before:hover {
     background: #a1ce58
+}
+.soc_ic span {
+    vertical-align: middle;
+    display: inline-block;
+    margin-top: 5px;
 }
 
 i.icon-twitter:before:hover {
@@ -235,12 +241,13 @@ i {
     font-weight: 600;
     color: #000;
 }
+.brd_crmb .breadcrumb{background:transparent;0px 15px 8px;margin-bottom:auto}
 
 .breadcrumb-item a {
     color: #a3a3a2;
 }
 
-
+ 
 /*filters*/
 .filters .accordion {
     margin-top: 50px
@@ -266,27 +273,36 @@ li.vwmre a {
     margin-top: 8px
 }
 
-/*product lists*/
-.h3,
-h3 {
-    font-size: 28px
-}
-
 /*sortby*/
-/*.sort select{-webkit-appearance:none;-moz-appearance:none;appearance:none;margin-left:10px}*/
+.sort select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin-left: 10px;
+    padding-right: 15px;
+    z-index: 1;
+}
 .sort select:before {
     content: "\f107";
     font-family: FontAwesome
 }
 
-.icon-angle-down:before {
+.sort .icon-angle-down:before {
     content: "\f107";
+}
+i.icon-angle-down {
+    position: absolute;
+    right: 5px;
+    top: 8px;
+    z-index: -1;
 }
 
 .sort span.grey {
-    color: #ddd;
+    color: #888;
 }
-
+h2.mt100.clk {
+    font-size: 24px;
+}
 
 /*product list section*/
 .soc_ic a {
@@ -308,7 +324,7 @@ h3 {
 }
 
 .soc_ic {
-    margin-top: 35px;
+    margin-top:18px;
 }
 
 .no-border {
@@ -321,7 +337,7 @@ h3 {
 }
 
 .list_url h3 {
-    margin: 50px 0;
+    margin:30px 0 20px;
 }
 
 .list_url ul li a {
@@ -331,11 +347,10 @@ h3 {
 
 .list_url ul li {
     list-style: none;
-    font-size: 18px;
-    line-height: 2
+    font-size: 14px;
+    line-height: 3;
 }
-
-
+.adrs.mt10{margin-top:10px;}
 
 @media screen and (max-width: 767px) {
 
@@ -386,7 +401,7 @@ h3 {
     }
 
     .mt100 {
-        margin-top: 20px
+        margin-top:10px
     }
 
     .filters .accordion {
@@ -402,7 +417,10 @@ h3 {
     }
 
     .adrs p {
-        margin-bottom: 30px;
+        margin-bottom: 20px;
+    }
+    p.pad_r_l{
+            margin-bottom: 10px;
     }
 
     .filters .accordion {
@@ -417,13 +435,9 @@ h3 {
         margin: 10px 0;
     }
 
-    .sudc_menu {
-        margin-bottom: 20px
-    }
-
-    .sudc_menu .navbar {
-        margin-top: 40px
-    }
+ .col-md-2.col-sm-4.col-xs-12.no_padding_left.filters {
+    border-bottom: 1px solid #ddd;
+}
 
     .cust-selc {
         width: 100%;
@@ -441,7 +455,7 @@ h3 {
     }
 
     .title {
-        font-size: 2.5em
+        font-size: 2em
     }
 
     .mt25,
@@ -452,10 +466,21 @@ h3 {
     .accordion {
         display: none
     }
-
+    .sort select{
+        
+            margin-left: 8px;
+    padding-right: 0px
+    }
+    .adrs.mt10{margin-top:0}
 }
 
-
+@media only screen and (min-device-width : 320px) and (max-device-width : 767px) and (orientation : landscape) and (-webkit-min-device-pixel-ratio: 2) {
+    .sort select {
+    margin-left: 8px;
+    padding-right: 15px;
+    width: 85%;
+}
+}
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
     .no_padding_left {
@@ -488,7 +513,16 @@ h3 {
         width: 80%;
         background: transparent;
     }
-
+.pad_r_l {
+    padding: 0 40px;
+    padding-right: 20px;
+}
+    
+  .sort select {
+    margin-left: 8px;
+    padding-right: 15px;
+    width: 88%;
+}   
 }
 
 @media screen and (min-width: 768px) {
@@ -520,4 +554,6 @@ h3 {
         padding-left: 15px
     }
 
+    
+    
 }
