--- a/css/style.css
+++ b/css/style.css
@@ -1943,6 +1943,7 @@ p.about_card_description {
     border-bottom: 0;
     font-size: 16px;
     font-weight: 400;
+
 }
 
 .submenu .nav-tabs > li.active > a {
@@ -2869,6 +2870,18 @@ img.line{
 
 /*767*/
 @media screen and (min-width : 768px) and (max-width: 991px) {
+    .about_the_card h1 {
+        width: 100%;
+        text-align: center;
+    }
+    .submenu ul.nav {
+        list-style: none;
+        display: flex;
+        overflow-x: scroll;
+        overflow-y: hidden;
+        -webkit-overflow-scrolling: touch;
+        white-space: nowrap;
+    }
     .member_area {
         margin-top: 30px;
     }
