--- a/css/style.css
+++ b/css/style.css
@@ -283,7 +283,17 @@ header {
     padding-right: 0;
 }
 
-
+.upar {
+    background: #FFF url(../images/bk_tp.png)no-repeat center;
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    right: 45px;
+    bottom: 40%;
+    z-index: 1;
+    box-shadow: 0 1px 6px 0 rgba(168, 156, 168, 1);
+    cursor: pointer;
+}
 /* Banner */
 
 .banner {
@@ -2156,8 +2166,34 @@ img.line{
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* Device */
 @media screen and (max-width:480px) {
+    .upar {
+        width: 30px;
+        height: 30px;
+        right: 25px;
+        bottom: 10%;
+        border-radius: 50%;
+    }
     .how_it_works {
         margin-bottom: 40px;
     }
@@ -2205,7 +2241,14 @@ img.line{
     .search-sec .container>.row{
         margin: 0;
     }
-
+    section.geturcard_bg .container {
+        background-color: #2298d0;
+        padding: 30px 15px;
+    }
+    .header-carousal .search-sec {
+        position: absolute;
+        left: 50%;
+    }
     .about_the_card h1 {
         top: 50%;
         left: 50%;
@@ -2396,12 +2439,14 @@ img.line{
         padding: 0 5px 0 5px;;
     }
 
-    .heroCarousal {
+    .header-carousal .heroCarousal {
         position: relative;
-        height: 310px;
+        height: 230px;
         background-color: #5f5959;
     }
-
+    .search-sec .form-group.where_in, .search-sec .form-group.sub_but {
+        margin-bottom: 10px; 
+    }
     .heroCarousal .carousel-inner > .item > img {
         height: 400px;
         display: none;
