--- a/css/style.css
+++ b/css/style.css
@@ -289,9 +289,10 @@ header {
     width: 50px;
     height: 50px;
     right: 45px;
-    bottom: 40%;
+    bottom: 10%;
     z-index: 1;
     box-shadow: 0 1px 6px 0 rgba(168, 156, 168, 1);
+    border-radius: 50%;
     cursor: pointer;
 }
 /* Banner */
