--- a/css/style.css
+++ b/css/style.css
@@ -183,6 +183,12 @@ header {
 .sudc_menu .dropdown {
     margin-right: 0px;
 }
+.sudc_menu .navbar > .container-fluid {
+    padding-right: 0;
+}
+.sudc_menu .navbar-collapse {
+  padding-right: 0;
+}
 
 .dropdown-content {
     display: none;
@@ -3252,3 +3258,410 @@ img.line{
 @media screen and (max-width: 1366px) {}
 
 @media screen and (max-width: 1200px) {}
+/* Modal */
+button.close{
+	padding: 6px 10px;
+}
+.close {
+    font-size: 27px;
+    font-weight: 300;    
+}
+.hidden {
+     display:none;
+}
+.modal-dialog {
+    width: 835px;	
+}
+.modal-content {
+    min-height: 400px;
+	border-radius: 0px;
+}
+.modal-header {    
+    border-bottom: 0px solid #e5e5e5;
+}
+.modal-content .modal-body {
+    padding: 15px 50px;
+    min-height: 275px;
+}
+.signup-modal-head h4 {
+    text-transform: uppercase;
+    color: #434343;
+}
+.signup-modal-head div {
+    font-size: 14px;
+}
+.text-uppercase {
+    text-transform: uppercase;
+}
+.signup-modal-head a {
+    color: #3a99d9;
+	text-transform: uppercase;
+}
+.signup-modal-head a:focus, .signup-modal-head a:hover {
+    color: #2e81b7;
+}
+.login-modal{
+	border-right: 1px solid #dedede;
+    padding: 0 50px 0 20px;
+}
+.signup-other{
+	padding: 0 20px 0 50px;
+}
+.login-modal .form-group {
+  position: relative;
+  margin-bottom: 1.5rem;
+}
+
+.login-modal .form-control-placeholder {
+  position: absolute;
+  top: 10px;
+  padding: 7px 0 0 13px;
+  transition: all 200ms;
+  opacity: 0.5; 
+  color:#b2b2b2;
+  font-weight:300;
+   font-family: 'Calibri', sans-serif;
+}
+
+.login-modal .form-control:focus + .form-control-placeholder,
+.login-modal .form-control:valid + .form-control-placeholder {
+  font-size: 75%;
+  transform: translate3d(0, -65%, 0);
+  opacity: 1;
+}
+.login-modal .form-group input {
+    font-size: 14px;
+    color: #6e6e6e;
+    margin-bottom: 15px;
+    height: 50px;
+    font-size: 14px;
+    border: 1px solid #ccc;
+	font-family: 'Calibri', sans-serif;
+	border-radius: 0;
+}
+
+.signup-modal-body .signup-form button {
+    height: 50px;
+    text-transform: uppercase;
+    width: 100%;
+}
+.btn.btn-block.btn-primary{
+    color: #fff;
+    background-color: #333;
+    border-color: #333;
+}
+.btn-forgot {
+    font-size: 12px;
+    float: right;
+    padding: 0;
+    margin-bottom: 15px;
+    margin-top: -10px;
+    color: #666;
+    text-transform: uppercase;
+}
+.signup-other{
+	padding: 0 20px 0 50px;
+}
+.signup-other a.signup-g{
+	background: #dc4b38;
+    height: 50px;
+    padding: 12px;
+	margin-bottom:15px;
+}
+.signup-other a.signup-g i {
+    padding-right: 8px;
+}
+.signup-other a.signup-g:hover {
+    background: #de5e46;
+	color:#fff;
+}
+.signup-other a.signup-fb {
+    background: #48629b;
+    height: 50px;
+    padding: 12px;
+}
+.signup-other a.signup-fb i {
+    padding-right: 8px;
+}
+a.signup-fb:hover {
+    background: #596da2;
+	color:#fff;
+}
+.signup-other{
+	min-height: 230px;
+    display: table;
+}
+.div-center-align{
+	vertical-align: middle;
+    display: table-cell;
+}
+.btn-other{
+    font-size: 16px;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 300;
+	border-radius:0;
+}
+ .border-or{
+    position: absolute;    
+    margin-left: -8px;
+    background: #fff;
+    top: 45%;
+}
+.modal-content.sign-option .modal-body {
+    padding: 15px 50px 30px 50px;
+    min-height: 275px;
+}
+.sign-option .signup-other{
+	min-height: 390px;	
+}
+p.signup-policy {
+    color: #6e6e6e;
+    font-size: 12px;
+}
+/* Radio button */
+.btn-radio {
+	margin-bottom:15px;
+}
+.btn-radio .radio{
+	display:inline;	
+}
+.btn-radio .checkbox label, 
+.btn-radio .radio label {
+    min-height: 20px;
+    padding-left: 0px;
+	padding-right:20px;
+    margin-bottom: 0;
+    font-weight: 400;
+    cursor: pointer;
+}
+.checkbox label:after,
+.radio label:after {
+  content: '';
+  display: table;
+  clear: both;
+}
+
+.checkbox .cr,
+.radio .cr {
+  position: relative;
+  display: inline;
+  border: 1px solid #a9a9a9;
+  border-radius: .25em;
+  width: 1.3em;
+  height: 1.3em;
+  float: left;
+  margin-right: .5em;
+}
+
+.radio .cr {
+  border-radius: 50%;
+}
+
+.checkbox .cr .cr-icon,
+.radio .cr .cr-icon {
+  position: absolute;
+  font-size: .8em;
+  line-height: 0;
+  top: 50%;
+  left: 13.6%;
+}
+
+.radio .cr .cr-icon {
+  margin-left: 0.04em;
+}
+
+.checkbox label input[type="checkbox"],
+.radio label input[type="radio"] {
+  display: none;
+}
+
+.checkbox label input[type="checkbox"]+.cr>.cr-icon,
+.radio label input[type="radio"]+.cr>.cr-icon {
+  opacity: 0;
+}
+
+.checkbox label input[type="checkbox"]:checked+.cr>.cr-icon,
+.radio label input[type="radio"]:checked+.cr>.cr-icon {
+  opacity: 1;
+}
+
+.checkbox label input[type="checkbox"]:disabled+.cr,
+.radio label input[type="radio"]:disabled+.cr {
+  opacity: .5;
+}
+/* Search box*/
+/**
+ * NAVBAR SEARCH
+ */
+ .nav-search {
+    position: absolute;
+    top: 0;
+    right: 15px;
+    width: 670px;
+}
+
+.nav-search .search-form {
+  float: right;
+  margin: 0;
+  padding: 0;
+  margin-top: 5px;
+}
+.nav-search .search-form .input-group {
+  display: block;
+  padding-right: 30px;
+  width: 30px;
+  overflow: hidden;
+  border-bottom: 1px solid transparent;
+  transition: all 0.2s ease-in-out;
+}
+.nav-search .search-form.open .input-group {
+  border-bottom: 1px solid #5F5F5F;
+  transition: all 0.2s ease-in-out;
+}
+.nav-search .search-form .form-control,
+.nav-search .search-form .form-control:focus {
+  /*color:#fff;*/
+  height: 30px;
+  padding: 6px 12px 0;
+  border-radius: 0;
+  box-shadow: none;
+  font-size: 16px;
+  background-color: transparent;
+  border-color: transparent;
+}
+.nav-search .search-form .input-group-btn {
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 30px;
+  height: 30px;
+  z-index: 2;
+}
+.nav-search .search-form .input-group-btn .icon {
+  position: relative;
+  bottom: -3px;
+  left: -1px;
+  font-size: 16px;
+}
+.nav-search .search-form .btn {
+  padding: 5px 8px;
+  border-radius: 0;
+  /*color:#fff;*/
+  background-color: transparent;
+  border: 1px solid transparent;
+  transition: all 0.2s ease-in-out;
+}
+.nav-search .search-form .btn:active,
+.nav-search .search-form .btn:hover,
+.nav-search .search-form .btn:focus,
+.nav-search .search-form.open .btn {
+  color: #fff;
+  background-color: #5F5F5F;
+  border: 1px solid #5F5F5F;
+  transition: all 0.2s ease-in-out;
+  outline: none;
+  outline: 0px auto -webkit-focus-ring-color;
+  outline-offset: 0;
+}
+.nav-search .search-form.open .input-group {
+  width: 145px;
+  transition: width 0.3s ease-in-out;
+}
+:-ms-input-placeholder {
+  color: #555 !important;
+}
+::-moz-placeholder {
+  color: #555 !important;
+}
+:-moz-placeholder {
+  color: #555 !important;
+}
+::-webkit-input-placeholder {
+  color: #555 !important;
+}
+@media (max-width: 767px) {
+  .nav-search .search-form {
+    float: none;
+    margin-top: 0px;
+    padding: 14px 0;
+  }
+  .nav-search .search-form .input-group,
+  .nav-search .search-form.open .input-group {
+    width: auto;
+    transition: none;
+    border-left: 2px solid #5F5F5F;
+  }
+  .nav-search .search-form .btn {
+    background-color: #5F5F5F;
+    border: 1px solid #5F5F5F;
+    transition: none;
+  }
+  :-ms-input-placeholder {
+    color: #555 !important;
+    text-transform: uppercase;
+  }
+  ::-moz-placeholder {
+    color: #555 !important;
+    text-transform: uppercase;
+  }
+  :-moz-placeholder {
+    color: #555 !important;
+    text-transform: uppercase;
+  }
+  ::-webkit-input-placeholder {
+    color: #555 !important;
+    text-transform: uppercase;
+  }
+}
+@media (min-width: 768px) and (max-width: 780px) {
+  .nav-search .search-form.open .input-group {
+    width: 135px;
+  }
+}
+@media (min-width: 980px) {
+ .nav-search .search-form.open .input-group {
+		width: 565px;
+		background: #fff;
+	}
+}
+@media (min-width: 1300px) {
+  .nav-search .search-form .input-group-btn {
+    width: 32px;
+    height: 32px;
+  }
+  .nav-search .search-form .input-group-btn .icon {
+    font-size: 18px;
+  }
+  .nav-search .search-form .form-control,
+  .nav-search .search-form .form-control:focus {
+    height: 32px;
+  }
+  .nav-search .search-form .input-group {
+    padding-right: 32px;
+    width: 32px;
+  }
+}
+
+
+
+
+/*991*/
+@media (max-width: 768px){
+	.modal-dialog {
+		width: 600px;
+		margin: 30px auto;
+	}
+	.border-or {
+		position: absolute;
+		margin-left: -47%;
+		background: #fff;
+		top: 62%;
+	}
+	.login-modal {
+		border-right: 0px solid #dedede;
+		padding: 20px 20px 30px 20px;
+		border-bottom: 1px solid #dedede;
+	}
+}
