--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,10 @@
     font-family: 'ArimaMadurai';
     src: url(../font/ArimaMadurai-Regular.ttf);
 }
-
+@font-face {
+    font-family: 'DancingScript';
+    src: url(../font/DancingScript-Regular.ttf);
+}
 .arima {
     font-family: 'ArimaMadurai', sans;
 }
@@ -187,7 +190,7 @@ header {
     padding-right: 0;
 }
 .sudc_menu .navbar-collapse {
-  padding-right: 0;
+    padding-right: 0;
 }
 
 .dropdown-content {
@@ -977,6 +980,11 @@ section.geturcard_bg span {
 
 section.geturcard_bg span h3 {
     color: white;
+    font-size: 28px;
+}
+
+a#othersubmenuhead {
+    margin-right: 10px;
 }
 
 a#submenuhead {
@@ -1001,13 +1009,13 @@ a#submenuhead {
     color: #109fc6;
 }
 
-.bttn {
+.getCard .bttn {
     border-radius: 16px;
     background-color: #fff;
     color: #000;
     text-transform: uppercase;
     font-weight: 700;
-    font-size: 30px;
+    font-size: 28px;
     display: inline-block;
     padding: 10px 30px;
     text-align: center;
@@ -1057,7 +1065,7 @@ a.bttn.white_black {
 }
 
 section.quick-shop {
-    margin-top: 90px;
+    margin-top: 70px;
 }
 
 section.quick-shop1 {
@@ -1090,15 +1098,21 @@ padding-left: 0px;
 }
 
 .trndy_items {
-    margin-top: 70px;
+    margin-top: 50px;
 }
 
 .dealsOfDay {
-    margin-top: 70px;
+    margin-top: 50px;
+}
+.dealsOfDay .description {
+    text-align: center;
+}
+.dealsOfDay .description .block{
+    display: none;
 }
 
 .arrivals-grids {
-    margin-top: 4em;
+    margin-top: 20px;
 }
 
 .grid-arr {
@@ -1124,7 +1138,7 @@ padding-left: 0px;
     position: relative;
     display: block;
     overflow: hidden;
-    margin: 0 0 20px 0;
+    margin: 0 0 15px 0;
     width: 100%;
 }
 
@@ -1234,12 +1248,14 @@ i.fa.fa-star.checked {
 }
 
 .ends_in {
-    margin: 30px auto 0 auto;
+    margin: 15px auto 0 auto;
     color: #7ba945;
-    border: 1px solid #CCCCCC;
+    border: 1px solid #e7e7e7;
+    background-color: #e7e7e7;
     display: table;
     text-align: center;
-    padding: 10px;
+    padding: 10px 20px;
+    font-weight: 700;
 }
 
 a.fill-div {
@@ -1262,12 +1278,12 @@ a.fill-div {
 }
 
 .quick-shop_3 {
-    margin-top: 70px;
+    margin-top: 60px;
 }
 
 .search-sec {
     position: absolute;
-    left: 48%;
+    left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 0px;
     width: 100%;
@@ -1338,9 +1354,14 @@ main_search {
     box-shadow: none;
     /* You may want to include this as bootstrap applies these styles too */
 }
+.search-sec .form-section {
+    width: 100%;
+    display: inline-block;
+    border: 5px solid rgba(0, 0, 0, 0.3);
+}
 
 .form-section .looking {
-    border: 5px solid rgba(0, 0, 0, 0.3);
+    /*    border: 5px solid rgba(0, 0, 0, 0.3);*/
     background: #FFFFFF;
     box-shadow: 5px #cccccc;
     -moz-background-clip: border;
@@ -1360,7 +1381,7 @@ main_search {
 }
 
 .looking label {
-    padding: 0 10px 0 10px;
+    padding: 0 10px 0 20px;
     width: 26% !important;
 }
 
@@ -1370,7 +1391,7 @@ main_search {
 }
 
 .form-section .where_in {
-    border: 5px solid rgba(0, 0, 0, 0.3);
+    /*  border: 5px solid rgba(0, 0, 0, 0.3);*/
     background: #FFFFFF;
     box-shadow: 5px #cccccc;
     -moz-background-clip: border;
@@ -1396,11 +1417,11 @@ main_search {
 
 .where_in label {
     width: 36%;
-    padding: 0 10px 0 10px;
+    padding: 0 10px 0 20px;
 }
 
 .form-section .sub_but {
-    border: 5px solid rgba(0, 0, 0, 0.3);
+    /* border: 5px solid rgba(0, 0, 0, 0.3);*/
     background: #FFFFFF;
     box-shadow: 5px #cccccc;
     -moz-background-clip: border;
@@ -1436,26 +1457,27 @@ section.top_stores .grid-arr {
 }
 
 .top_stores .description h6 {
-    font-size: 1em;
+    font-size: 16px;
     margin: 0.4em 0;
 }
 
 .top_stores .description h4 {
-    font-size: 16px;
+    font-size: 20px;
+    font-weight: 600;
     margin: 0.4em 0;
     color: #86b140;
 }
 
 .top_stores .description a {
-    font-size: 12px;
+    font-size: 13px;
 }
 
 .top_stores .description {
-    margin-bottom: 25px;
+    margin-bottom: 10px;
 }
 
 section.top_stores {
-    margin-top: 70px;
+    margin-top: 50px;
 }
 
 section.top_stores .view_more {
@@ -1471,7 +1493,7 @@ section.top_stores .view_more {
 /* Product carousal*/
 .dealsOfDay .carousel,
 .recentlyViewed .carousel {
-    margin: 10px auto;
+    margin: 0px auto;
     padding: 0 10px;
 }
 
@@ -1599,7 +1621,7 @@ section.top_stores .view_more {
 
 .top_category .carousel,
 .recentlyViewed .carousel {
-    margin: 20px auto;
+    margin: 0px auto;
     padding: 0 10px;
 }
 
@@ -1672,15 +1694,18 @@ section.top_stores .view_more {
 /*Budget store*/
 .budget_stores {
     background-color: #e7e7e7;
-    margin-top: 90px;
+    margin-top: 70px;
 }
 
 .budget_stores h2 {
     margin: 60px 0 40px 0;
 }
 
+.budget_stores .header_title {
+    margin-top: 60px;
+}
 .budget_stores .row {
-    margin: 40px 0 70px 0;
+    margin: 30px 0 70px 0;
 }
 
 .footer_top .got_question p {
@@ -1722,6 +1747,9 @@ section.top_stores .view_more {
 .customer_pod p {
     margin: 20px 30px 20px 30px;
 }
+.customer_pod h3 {
+    font-size: 35px;
+}
 
 .app_store_pod {
     background-color: #4cb993;
@@ -1737,14 +1765,19 @@ section.top_stores .view_more {
 
 .app_store_pod h1 {
     color: #FFFFFF;
+    font-size: 50px;
 }
 
 .app_logo_pod {
-    padding: 40px;
+    padding: 10px 40px;
+}
+.app_logo_pod .col-md-6.col-sm-6.col-xs-12.no-padding {
+    padding-left: 10px;
 }
 
 .app_logo_pod p {
-    font-size: 18px;
+    font-size: 25px;
+    font-weight: 600;
 }
 
 .app_store_pod .row {
@@ -1820,15 +1853,15 @@ span.act_price {
 }
 
 section.recentlyViewed {
-    margin: 70px 0 70px 0;
+    margin: 50px 0 50px 0;
 }
 
 section.top_category {
-    margin-top: 70px;
+    margin-top: 50px;
 }
 
 section.customer_speaks {
-    margin-top: 70px;
+    margin-top: 60px;
 }
 
 h2.text-center.alegreya::before {
@@ -1839,6 +1872,7 @@ h2.text-center.alegreya::before {
 .header_title {
     margin: 20px auto 10px auto;
     display: table;
+    font-size: 35px;
 }
 
 .header_title h2 {
@@ -1846,9 +1880,15 @@ h2.text-center.alegreya::before {
 }
 
 .header_title img {
-    vertical-align: super;
+    vertical-align: baseline;
 }
-
+.header_title p {
+    font-size: 22px;
+    font-style: italic;
+    text-align: center;
+    color: #8a8787;
+    font-family: DancingScript;
+}
 .show_mobile {
     display: none;
 }
@@ -2162,8 +2202,17 @@ img.line{
     margin-top: 20px;
     font-weight: 500;
 }
-
-
+.home_view_more a {
+    color: #000;
+    border: none;
+    margin-top: 30px;
+    margin-bottom: 10px;
+    font-weight: 500;
+}
+.home_view_more .btn{
+    border: 1px solid #000000; 
+    background-color: #FFFFFF;
+} 
 
 
 
@@ -3260,21 +3309,21 @@ img.line{
 @media screen and (max-width: 1200px) {}
 /* Modal */
 button.close{
-	padding: 6px 10px;
+    padding: 6px 10px;
 }
 .close {
     font-size: 27px;
     font-weight: 300;    
 }
 .hidden {
-     display:none;
+    display:none;
 }
 .modal-dialog {
     width: 835px;	
 }
 .modal-content {
     min-height: 400px;
-	border-radius: 0px;
+    border-radius: 0px;
 }
 .modal-header {    
     border-bottom: 0px solid #e5e5e5;
@@ -3295,39 +3344,39 @@ button.close{
 }
 .signup-modal-head a {
     color: #3a99d9;
-	text-transform: uppercase;
+    text-transform: uppercase;
 }
 .signup-modal-head a:focus, .signup-modal-head a:hover {
     color: #2e81b7;
 }
 .login-modal{
-	border-right: 1px solid #dedede;
+    border-right: 1px solid #dedede;
     padding: 0 50px 0 20px;
 }
 .signup-other{
-	padding: 0 20px 0 50px;
+    padding: 0 20px 0 50px;
 }
 .login-modal .form-group {
-  position: relative;
-  margin-bottom: 1.5rem;
+    position: relative;
+    margin-bottom: 1.5rem;
 }
 
 .login-modal .form-control-placeholder {
-  position: absolute;
-  top: 10px;
-  padding: 7px 0 0 13px;
-  transition: all 200ms;
-  opacity: 0.5; 
-  color:#b2b2b2;
-  font-weight:300;
-   font-family: 'Calibri', sans-serif;
+    position: absolute;
+    top: 10px;
+    padding: 7px 0 0 13px;
+    transition: all 200ms;
+    opacity: 0.5; 
+    color:#b2b2b2;
+    font-weight:300;
+    font-family: 'Calibri', sans-serif;
 }
 
 .login-modal .form-control:focus + .form-control-placeholder,
 .login-modal .form-control:valid + .form-control-placeholder {
-  font-size: 75%;
-  transform: translate3d(0, -65%, 0);
-  opacity: 1;
+    font-size: 75%;
+    transform: translate3d(0, -65%, 0);
+    opacity: 1;
 }
 .login-modal .form-group input {
     font-size: 14px;
@@ -3336,8 +3385,8 @@ button.close{
     height: 50px;
     font-size: 14px;
     border: 1px solid #ccc;
-	font-family: 'Calibri', sans-serif;
-	border-radius: 0;
+    font-family: 'Calibri', sans-serif;
+    border-radius: 0;
 }
 
 .signup-modal-body .signup-form button {
@@ -3360,20 +3409,20 @@ button.close{
     text-transform: uppercase;
 }
 .signup-other{
-	padding: 0 20px 0 50px;
+    padding: 0 20px 0 50px;
 }
 .signup-other a.signup-g{
-	background: #dc4b38;
+    background: #dc4b38;
     height: 50px;
     padding: 12px;
-	margin-bottom:15px;
+    margin-bottom:15px;
 }
 .signup-other a.signup-g i {
     padding-right: 8px;
 }
 .signup-other a.signup-g:hover {
     background: #de5e46;
-	color:#fff;
+    color:#fff;
 }
 .signup-other a.signup-fb {
     background: #48629b;
@@ -3385,14 +3434,14 @@ button.close{
 }
 a.signup-fb:hover {
     background: #596da2;
-	color:#fff;
+    color:#fff;
 }
 .signup-other{
-	min-height: 230px;
+    min-height: 230px;
     display: table;
 }
 .div-center-align{
-	vertical-align: middle;
+    vertical-align: middle;
     display: table-cell;
 }
 .btn-other{
@@ -3400,9 +3449,9 @@ a.signup-fb:hover {
     color: #fff;
     text-transform: uppercase;
     font-weight: 300;
-	border-radius:0;
+    border-radius:0;
 }
- .border-or{
+.border-or{
     position: absolute;    
     margin-left: -8px;
     background: #fff;
@@ -3413,7 +3462,7 @@ a.signup-fb:hover {
     min-height: 275px;
 }
 .sign-option .signup-other{
-	min-height: 390px;	
+    min-height: 390px;	
 }
 p.signup-policy {
     color: #6e6e6e;
@@ -3421,80 +3470,80 @@ p.signup-policy {
 }
 /* Radio button */
 .btn-radio {
-	margin-bottom:15px;
+    margin-bottom:15px;
 }
 .btn-radio .radio{
-	display:inline;	
+    display:inline;	
 }
 .btn-radio .checkbox label, 
 .btn-radio .radio label {
     min-height: 20px;
     padding-left: 0px;
-	padding-right:20px;
+    padding-right:20px;
     margin-bottom: 0;
     font-weight: 400;
     cursor: pointer;
 }
 .checkbox label:after,
 .radio label:after {
-  content: '';
-  display: table;
-  clear: both;
+    content: '';
+    display: table;
+    clear: both;
 }
 
 .checkbox .cr,
 .radio .cr {
-  position: relative;
-  display: inline;
-  border: 1px solid #a9a9a9;
-  border-radius: .25em;
-  width: 1.3em;
-  height: 1.3em;
-  float: left;
-  margin-right: .5em;
+    position: relative;
+    display: inline;
+    border: 1px solid #a9a9a9;
+    border-radius: .25em;
+    width: 1.3em;
+    height: 1.3em;
+    float: left;
+    margin-right: .5em;
 }
 
 .radio .cr {
-  border-radius: 50%;
+    border-radius: 50%;
 }
 
 .checkbox .cr .cr-icon,
 .radio .cr .cr-icon {
-  position: absolute;
-  font-size: .8em;
-  line-height: 0;
-  top: 50%;
-  left: 13.6%;
+    position: absolute;
+    font-size: .8em;
+    line-height: 0;
+    top: 50%;
+    left: 13.6%;
 }
 
 .radio .cr .cr-icon {
-  margin-left: 0.04em;
+    margin-left: 0.04em;
 }
 
 .checkbox label input[type="checkbox"],
 .radio label input[type="radio"] {
-  display: none;
+    display: none;
 }
 
 .checkbox label input[type="checkbox"]+.cr>.cr-icon,
 .radio label input[type="radio"]+.cr>.cr-icon {
-  opacity: 0;
+    opacity: 0;
 }
 
 .checkbox label input[type="checkbox"]:checked+.cr>.cr-icon,
 .radio label input[type="radio"]:checked+.cr>.cr-icon {
-  opacity: 1;
+    opacity: 1;
 }
 
 .checkbox label input[type="checkbox"]:disabled+.cr,
 .radio label input[type="radio"]:disabled+.cr {
-  opacity: .5;
+    opacity: .5;
 }
 /* Search box*/
 /**
- * NAVBAR SEARCH
- */
- .nav-search {
+* NAVBAR SEARCH
+*/
+.nav-search {
     position: absolute;
     top: 0;
     right: 15px;
@@ -3502,146 +3551,146 @@ p.signup-policy {
 }
 
 .nav-search .search-form {
-  float: right;
-  margin: 0;
-  padding: 0;
-  margin-top: 5px;
+    float: right;
+    margin: 0;
+    padding: 0;
+    margin-top: 5px;
 }
 .nav-search .search-form .input-group {
-  display: block;
-  padding-right: 30px;
-  width: 30px;
-  overflow: hidden;
-  border-bottom: 1px solid transparent;
-  transition: all 0.2s ease-in-out;
+    display: block;
+    padding-right: 30px;
+    width: 30px;
+    overflow: hidden;
+    border-bottom: 1px solid transparent;
+    transition: all 0.2s ease-in-out;
 }
 .nav-search .search-form.open .input-group {
-  border-bottom: 1px solid #5F5F5F;
-  transition: all 0.2s ease-in-out;
+    border-bottom: 1px solid #5F5F5F;
+    transition: all 0.2s ease-in-out;
 }
 .nav-search .search-form .form-control,
 .nav-search .search-form .form-control:focus {
-  /*color:#fff;*/
-  height: 30px;
-  padding: 6px 12px 0;
-  border-radius: 0;
-  box-shadow: none;
-  font-size: 16px;
-  background-color: transparent;
-  border-color: transparent;
+    /*color:#fff;*/
+    height: 30px;
+    padding: 6px 12px 0;
+    border-radius: 0;
+    box-shadow: none;
+    font-size: 16px;
+    background-color: transparent;
+    border-color: transparent;
 }
 .nav-search .search-form .input-group-btn {
-  display: block;
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 30px;
-  height: 30px;
-  z-index: 2;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 30px;
+    height: 30px;
+    z-index: 2;
 }
 .nav-search .search-form .input-group-btn .icon {
-  position: relative;
-  bottom: -3px;
-  left: -1px;
-  font-size: 16px;
+    position: relative;
+    bottom: -3px;
+    left: -1px;
+    font-size: 16px;
 }
 .nav-search .search-form .btn {
-  padding: 5px 8px;
-  border-radius: 0;
-  /*color:#fff;*/
-  background-color: transparent;
-  border: 1px solid transparent;
-  transition: all 0.2s ease-in-out;
+    padding: 5px 8px;
+    border-radius: 0;
+    /*color:#fff;*/
+    background-color: transparent;
+    border: 1px solid transparent;
+    transition: all 0.2s ease-in-out;
 }
 .nav-search .search-form .btn:active,
 .nav-search .search-form .btn:hover,
 .nav-search .search-form .btn:focus,
 .nav-search .search-form.open .btn {
-  color: #fff;
-  background-color: #5F5F5F;
-  border: 1px solid #5F5F5F;
-  transition: all 0.2s ease-in-out;
-  outline: none;
-  outline: 0px auto -webkit-focus-ring-color;
-  outline-offset: 0;
-}
-.nav-search .search-form.open .input-group {
-  width: 145px;
-  transition: width 0.3s ease-in-out;
-}
-:-ms-input-placeholder {
-  color: #555 !important;
-}
-::-moz-placeholder {
-  color: #555 !important;
-}
-:-moz-placeholder {
-  color: #555 !important;
-}
-::-webkit-input-placeholder {
-  color: #555 !important;
-}
-@media (max-width: 767px) {
-  .nav-search .search-form {
-    float: none;
-    margin-top: 0px;
-    padding: 14px 0;
-  }
-  .nav-search .search-form .input-group,
-  .nav-search .search-form.open .input-group {
-    width: auto;
-    transition: none;
-    border-left: 2px solid #5F5F5F;
-  }
-  .nav-search .search-form .btn {
+    color: #fff;
     background-color: #5F5F5F;
     border: 1px solid #5F5F5F;
-    transition: none;
-  }
-  :-ms-input-placeholder {
+    transition: all 0.2s ease-in-out;
+    outline: none;
+    outline: 0px auto -webkit-focus-ring-color;
+    outline-offset: 0;
+}
+.nav-search .search-form.open .input-group {
+    width: 145px;
+    transition: width 0.3s ease-in-out;
+}
+:-ms-input-placeholder {
     color: #555 !important;
-    text-transform: uppercase;
-  }
-  ::-moz-placeholder {
+}
+::-moz-placeholder {
     color: #555 !important;
-    text-transform: uppercase;
-  }
-  :-moz-placeholder {
+}
+:-moz-placeholder {
     color: #555 !important;
-    text-transform: uppercase;
-  }
-  ::-webkit-input-placeholder {
+}
+::-webkit-input-placeholder {
     color: #555 !important;
-    text-transform: uppercase;
-  }
+}
+@media (max-width: 767px) {
+    .nav-search .search-form {
+        float: none;
+        margin-top: 0px;
+        padding: 14px 0;
+    }
+    .nav-search .search-form .input-group,
+    .nav-search .search-form.open .input-group {
+        width: auto;
+        transition: none;
+        border-left: 2px solid #5F5F5F;
+    }
+    .nav-search .search-form .btn {
+        background-color: #5F5F5F;
+        border: 1px solid #5F5F5F;
+        transition: none;
+    }
+    :-ms-input-placeholder {
+        color: #555 !important;
+        text-transform: uppercase;
+    }
+    ::-moz-placeholder {
+        color: #555 !important;
+        text-transform: uppercase;
+    }
+    :-moz-placeholder {
+        color: #555 !important;
+        text-transform: uppercase;
+    }
+    ::-webkit-input-placeholder {
+        color: #555 !important;
+        text-transform: uppercase;
+    }
 }
 @media (min-width: 768px) and (max-width: 780px) {
-  .nav-search .search-form.open .input-group {
-    width: 135px;
-  }
+    .nav-search .search-form.open .input-group {
+        width: 135px;
+    }
 }
 @media (min-width: 980px) {
- .nav-search .search-form.open .input-group {
-		width: 565px;
-		background: #fff;
-	}
+    .nav-search .search-form.open .input-group {
+        width: 565px;
+        background: #fff;
+    }
 }
 @media (min-width: 1300px) {
-  .nav-search .search-form .input-group-btn {
-    width: 32px;
-    height: 32px;
-  }
-  .nav-search .search-form .input-group-btn .icon {
-    font-size: 18px;
-  }
-  .nav-search .search-form .form-control,
-  .nav-search .search-form .form-control:focus {
-    height: 32px;
-  }
-  .nav-search .search-form .input-group {
-    padding-right: 32px;
-    width: 32px;
-  }
+    .nav-search .search-form .input-group-btn {
+        width: 32px;
+        height: 32px;
+    }
+    .nav-search .search-form .input-group-btn .icon {
+        font-size: 18px;
+    }
+    .nav-search .search-form .form-control,
+    .nav-search .search-form .form-control:focus {
+        height: 32px;
+    }
+    .nav-search .search-form .input-group {
+        padding-right: 32px;
+        width: 32px;
+    }
 }
 
 
@@ -3649,19 +3698,19 @@ p.signup-policy {
 
 /*991*/
 @media (max-width: 768px){
-	.modal-dialog {
-		width: 600px;
-		margin: 30px auto;
-	}
-	.border-or {
-		position: absolute;
-		margin-left: -47%;
-		background: #fff;
-		top: 62%;
-	}
-	.login-modal {
-		border-right: 0px solid #dedede;
-		padding: 20px 20px 30px 20px;
-		border-bottom: 1px solid #dedede;
-	}
+    .modal-dialog {
+        width: 600px;
+        margin: 30px auto;
+    }
+    .border-or {
+        position: absolute;
+        margin-left: -47%;
+        background: #fff;
+        top: 62%;
+    }
+    .login-modal {
+        border-right: 0px solid #dedede;
+        padding: 20px 20px 30px 20px;
+        border-bottom: 1px solid #dedede;
+    }
 }
