--- a/css/product.css
+++ b/css/product.css
@@ -359,6 +359,140 @@ h2.mt100.clk {
 }
 .adrs.mt10{margin-top:10px;}
 
+.comp-product-specs {
+    background-color: #fff;
+    padding: 15px 35px
+}
+
+.comp-product-specs .p-keyfeatures {
+    margin: 0;
+    border: none
+}
+
+.comp-product-specs b,.comp-product-specs strong {
+    font-family: font-bold;
+    font-size: 17px;
+    color: #333
+}
+
+.comp-product-specs.comp {
+    color: #000
+}
+
+.comp-product-specs .spec-title-wrp {
+    border-bottom: 1px dashed #e5e5e5;
+    cursor: pointer
+}
+
+.comp-product-specs .spec-section {
+    margin-bottom: 15px
+}
+
+.comp-product-specs .spec-section:last-child {
+    margin-bottom: 0
+}
+
+.comp-product-specs .spec-title {
+    font-size: 16px;
+    line-height: 20px;
+    padding: 10px 0 12px 0;
+    color: #333
+}
+
+.comp-product-specs .spec-title .headTitle {
+    font-size: 20px;
+    padding-left: 22px
+}
+
+.comp-product-specs .spec-title .toggle-sec {
+    height: 20px;
+    width: 20px;
+    font-size: 12px;
+    line-height: 20px;
+    margin-right: 10px;
+    border: 1px solid #000;
+    border-radius: 3px;
+    vertical-align: top;
+    text-align: center
+}
+
+.comp-product-specs .spec-body.specifications {
+    padding-left: 52px
+}
+
+.comp-product-specs .spec-body {
+    padding: 15px 35px 20px 33px;
+    font-size: 14px;
+    line-height: 16px;
+    overflow: hidden
+}
+
+.comp-product-specs .spec-body .detailssubbox {
+    line-height: 20px
+}
+
+.comp-product-specs .spec-body .extLink {
+    font-size: 14px;
+    line-height: 1;
+    text-decoration: none;
+    margin-bottom: 12px;
+    display: inline-block
+}
+
+.comp-product-specs .spec-body .extLink-lbl {
+    text-decoration: underline
+}
+
+.comp-product-specs .spec-body .dtls-li>span {
+    display: table-cell
+}
+
+.comp-product-specs .spec-body .dtls-li {
+    padding: 0 15px;
+    font-size: 13px;
+    line-height: 22px;
+    position: relative;
+    display: table;
+    white-space: initial;
+    overflow: initial;
+    text-overflow: initial
+}
+
+.comp-product-specs .spec-body .dtls-li .list-cicrle-cont {
+    width: 1%
+}
+
+.comp-product-specs .spec-body .dtls-li a {
+    color: #000
+}
+
+.comp-product-specs .spec-body .dtls-li a:hover,.comp-product-specs .spec-body .dtls-li a:active {
+    text-decoration: underline
+}
+
+.comp-product-specs .spec-body .dtls-li a.extLink:hover,.comp-product-specs .spec-body .dtls-li a.extLink:active {
+    text-decoration: none
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media screen and (max-width: 767px) {
 
     body,
