--- a/css/style.css
+++ b/css/style.css
@@ -3721,6 +3721,8 @@ p.signup-policy {
 
     .heroCarousal .carousel-inner > .item > img {
         height: 310px;
+        display: none;
+        background-image: url('../images/Banner%20768.jpg');
     }
 
     .sudc_menu .navbar-nav {
