--- a/css/style.css
+++ b/css/style.css
@@ -1278,7 +1278,7 @@ a.fill-div {
 }
 
 .top_stores .grid-arr .grid-arrival figure > a .grid-img img {
-    width: 100%;
+    width: 90%;
 }
 
 .top_stores .grid-arrival {
@@ -1286,9 +1286,19 @@ a.fill-div {
 }
 
 .top_stores .grid-img {
-    height: 110px;
+    height: 40px;
 }
-
+.top_stores .col-md-2{
+    padding-left: 5px;
+    padding-right: 5px;
+}
+.top_stores .grid-arr .grid-arrival figure > a .grid-img img {
+    width: 85%;
+    margin: 20px auto 10px auto;
+    vertical-align: middle;
+    position: relative;
+    
+}
 .quick-shop_3 {
     margin-top: 60px;
 }
